Filters design done

--- a/Cloudents.Web/ClientApp/components/general/link-verticals.less
+++ b/Cloudents.Web/ClientApp/components/general/link-verticals.less
@@ -12,7 +12,7 @@ li /deep/ .list__tile--active {
     color:#fff;
 }
 
-v-subheader {
+.application .theme--light.navigation-drawer .subheader.subheader.sub {
     font-size: 10px;
     color: @Chat;
     text-transform: capitalize;
