--- a/Cloudents.Web/ClientApp/components/pages/results/ResultJob.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/ResultJob.less
@@ -1,4 +1,34 @@
-﻿@font-bold: "OpenSans-Bold";
+﻿@import "../../../mixin.less";
+
+.job-cell {
+    color: @Book-Info !important; // override
+    .cell-title {
+        font-size: 14px;
+        font-weight: bold;
+        line-height: 1.29;
+        letter-spacing: -0.3px;
+        color: @Jobs;
+    }
+
+    .desc {
+        font-size: 14px;
+        line-height: 1.29;
+        letter-spacing: -0.3px;
+        color: @Book-Info;
+    }
+
+    p {
+        //.giveMeEllipsis(3,1.29);
+        font-size: 14px;
+        color: #000;
+        height: 72px;
+        margin-right: 70px;
+        line-height: 1.29;
+        letter-spacing: -0.3px;
+        overflow:hidden;
+    }
+}
+/*@font-bold: "OpenSans-Bold";
 @font-regular: "OpenSans-Regular";
 @font-semibold: "OpenSans-Semibold";
 
@@ -100,4 +130,4 @@
     .mb-14 {
         margin-bottom: 14px;
     }
-}
+}*/
