--- a/Cloudents.Web/ClientApp/components/pages/results/ResultFood.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/ResultFood.less
@@ -1,4 +1,7 @@
-﻿@font-bold: "OpenSans-Bold";
+﻿.place-cell {
+
+}
+/*@font-bold: "OpenSans-Bold";
 @font-regular: "OpenSans-Regular";
 @font-semibold: "OpenSans-Semibold";
 
@@ -225,4 +228,4 @@
             left: 105px;
         }
     }
-}
+}*/
