--- a/Cloudents.Web/ClientApp/components/pages/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/Result.less
@@ -1,7 +1,8 @@
 ﻿@import "../../../mixin.less";
 
 .sec-result {
-    max-width: 520px;
+    //max-width: 520px;
+    width:520px; //TODO: need to do responsive
 
     .cell {
         background: #fff;
@@ -50,4 +51,6 @@
     .full-height {
         height: 100%;
     }
+
+   
 }
