--- a/Cloudents.Web/ClientApp/components/pages/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/Result.less
@@ -2,10 +2,10 @@
 
 .sec-result {
     //max-width: 520px;
-    width:520px; //TODO: need to do responsive
-
+    //TODO: need to do responsive
     .cell {
         background: #fff;
+        width: 520px;
     }
 
     h5 {
@@ -51,6 +51,4 @@
     .full-height {
         height: 100%;
     }
-
-   
 }
