--- a/Cloudents.Web/ClientApp/components/pages/results/ResultBook.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/ResultBook.less
@@ -31,6 +31,12 @@
     .cell-title {
         color: @Textbooks;
     }
+
+    .imageWrapper(104px,160px);
+
+    .img-wrap {
+        .flexSameSize();
+    }
 }
 /*@font-bold: "OpenSans-Bold";
 @font-regular: "OpenSans-Regular";
