--- a/Cloudents.Web/ClientApp/components/pages/results/ResultTutor.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/ResultTutor.less
@@ -1,7 +1,7 @@
 ﻿@import "../../../mixin.less";
 a {
-    width: 100%;
-    height: 136px;
+ //   width: 100%;
+    //height: 136px;
 }
 
 .avatar {
