Some fixes of design

--- a/Cloudents.Web/ClientApp/components/general/link-verticals.less
+++ b/Cloudents.Web/ClientApp/components/general/link-verticals.less
@@ -2,7 +2,7 @@
 
 .list__tile__title {
     color: #fff;
-    font-size: 12px;
+    font-size: 13px;
     letter-spacing: -0.2px;
     text-transform: capitalize;
 }
@@ -15,6 +15,7 @@ li /deep/ .list__tile--active {
 .application .theme--light.navigation-drawer .subheader.subheader.sub {
     font-size: 10px;
     color: @Chat;
+    height:25px;
     text-transform: capitalize;
 }
 
@@ -31,7 +32,6 @@ li /deep/ .list__tile--active {
 }*/
 
 .bg-ask {
-  //  background-color: @Ask-a-Question;
 
     svg {
         width: 18.7px;
