remove luis prefix and remove page directory

--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -1,5 +1,7 @@
-﻿@import "../../../mixin.less";
-
+﻿@import "../../mixin.less";
+.loader {
+    .inTheMiddle();
+}
 .sec-result {
     //max-width: 520px;
     //TODO: need to do responsive
