--- a/Cloudents.Web/ClientApp/components/results/ResultJob.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultJob.less
@@ -1,5 +1,4 @@
-﻿@import "../../../mixin.less";
-
+﻿@import "../../mixin.less";
 .job-cell {
     color: @Book-Info !important; // override
     .cell-title {
