in progress personalize

--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -2,6 +2,10 @@
 .loader {
     .inTheMiddle();
 }
+.snack__content {
+    min-width: 98vw;
+    height: 55px;
+}
 .sec-result {
     //max-width: 520px;
     //TODO: need to do responsive
