--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 
 <html>
 <head>
+    <meta name="apple-itunes-app" content="app-id=990911114">
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <base href="~/" />
