update versions, case #8763 get correct location for food, start food map

--- a/Cloudents.Web/ClientApp/theme.styl
+++ b/Cloudents.Web/ClientApp/theme.styl
@@ -1,6 +1,6 @@
 /** Stylus Styles */
 $color-pack = false
-@import '../../node_modules/vuetify/src/stylus/settings/_colors'
+@import '../node_modules/vuetify/src/stylus/settings/_colors'
 
 $theme := {
   primary: $green.darken-2
