--- a/Cloudents.Web/ClientApp/main.styl
+++ b/Cloudents.Web/ClientApp/main.styl
@@ -1,3 +1,4 @@
 /** Stylus Styles */
 $color-pack = false
-@import '../../node_modules/vuetify/src/stylus/app'
+@import '../node_modules/vuetify/src/stylus/app'
+@import '../node_modules/vuetify/src/stylus/components/_navigation-drawer.styl'
