Fixes to result page.

--- a/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
@@ -18,6 +18,13 @@ li /deep/ .list__tile--active {
     height:25px;
     text-transform: capitalize;
 }
+.navigation-drawer.aside {
+    background: #3293f6 !important; //override vuetify
+}
+
+.navigation-drawer {
+    padding: 0;
+}
 
 .vertical-cycle {
     border-radius: 50%;
@@ -25,11 +32,7 @@ li /deep/ .list__tile--active {
     height: 32px;
     .inTheMiddle();
 }
-/*svg {
-    /deep/ .fill {
-        fill: #fff;
-    }
-}*/
+
 
 .bg-ask {
 
