--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -2,25 +2,27 @@
 .loader {
     .inTheMiddle();
 }
-.snack__content {
+/*.snack__content {
     min-width: 98vw;
     height: 55px;
-}
+}*/
 .sec-result {
     //max-width: 520px;
     //TODO: need to do responsive
     @cell-width: 504px;
 
+    max-width: 504px;
+
     .cell {
         background: #fff;
-        width: @cell-width;
+        //width: @cell-width;
         border-radius: 4px;
     }
 
     h5 {
         font-weight: 600;
         text-align: center;
-        width: @cell-width;
+        //width: @cell-width;
         color: @Spitball-Text;
     }
 
