--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -25,6 +25,9 @@ button {
 .application--light {
     background: @Site-Background;
 }
+.application--light .list {
+    background: transparent !important;  //override
+}
 
 
 
