Starting responsive design

--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -12,8 +12,8 @@
 <head>
     <title>@ViewBag.title</title>
 
-    
-    <meta name="viewport" content="width=device-width" />
+    <meta name="mobile-web-app-capable" content="yest" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <base href="~/" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
