Fixes of tutor purchase queries
case 8932
Some fixes in webpack

--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -23,7 +23,7 @@ button {
 }
 
 .application--light {
-    background: @Site-Background;
+    background: @Site-Background !important; //override
 }
 .application--light .list {
     background: transparent !important;  //override
