--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -3,6 +3,7 @@
 @logoWidth: 215px;
 @iconWidth: 70px;
 
+
 .header {
     .logo-link {
         width: @logoWidth; //note this is the navbar width as on navbar.vue
@@ -20,9 +21,7 @@
         border-bottom: 1px solid #ddd;
     }
 
-    .header {
-        background: #fff;
-    }
+    background-color: #fff !important; //override style
 
     .first-header {
         //  border-bottom: 1px solid #ddd;
@@ -70,8 +69,8 @@
             top: -10px;
             right: -10px;
             background: @Notificaion-Text-Circle !important; //TODO: override
-            border:1px solid #fff !important;
-            box-sizing :content-box;
+            border: 1px solid #fff !important;
+            box-sizing: content-box;
         }
 
         svg {
@@ -86,9 +85,10 @@
         letter-spacing: -0.3px;
         font-size: 14px;
         border-radius: 8px;
-        text-transform:capitalize;
-        height:24px;
-        line-height:24px;
+        text-transform: capitalize;
+        height: 24px;
+        line-height: 24px;
+
         &.chip--selected {
             background: #0455a8;
         }
