--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -1,15 +1,10 @@
 ﻿@import "../../mixin.less";
-/*.loader {
+.loader {
     .inTheMiddle();
-}*/
-/*.snack__content {
-    min-width: 98vw;
-    height: 55px;
-}*/
+}
+
 .sec-result {
-    //max-width: 520px;
-    //TODO: need to do responsive
-    /*@cell-width: 504px;
+    //@cell-width: 504px;
 
     max-width: 504px;
 
@@ -24,15 +19,15 @@
         text-align: center;
         //width: @cell-width;
         color: @Spitball-Text;
-    }*/
+    }
 
-    .s-divider {
+    /*.s-divider {
         width: 0px;
         border-left: solid 1px @Spitball-Main-color;
         margin: 4px 6px;
-    }
+    }*/
 
-    .chip {
+    /*.chip {
         background: #fff;
         color: @Spitball-Main-color;
         border: 1px solid @Spitball-Main-color;
@@ -47,9 +42,9 @@
             border: 0;
             background: @Spitball-Main-color; //override
         }
-    }
+    }*/
 
-    .sub-search {
+    /*.sub-search {
         overflow: auto;
         white-space: nowrap;
 
@@ -62,7 +57,7 @@
                 color: #fff; //override
             }
         }
-    }
+    }*/
 
     /*.full-height {
         height: 100%;
