--- a/Cloudents.Web/ClientApp/components/helpers/radioList.less
+++ b/Cloudents.Web/ClientApp/components/helpers/radioList.less
@@ -1,10 +1,37 @@
-﻿.chip {
-    background: #bbb;
-    color: #FFF;
+﻿@import "../../mixin.less";
+
+.application--light .chip {
+    font-size: 14px; //?
+    background: #fff;
+    color: @Spitball-Main-color;
+    border: 1px solid @Spitball-Main-color;
+    border-radius: 10px;
     letter-spacing: -0.3px;
-    font-size: 14px;
+    //font-size: 12px;
+    text-transform: capitalize;
+    padding: 0 24px;
 
     &.chip--selected {
-        background: #0455a8;
+        color: #fff;
+        border: 0;
+        background: @Spitball-Main-color;
     }
 }
+
+/*.chip {
+        background: #fff;
+        color: @Spitball-Main-color;
+        border: 1px solid @Spitball-Main-color;
+        border-radius: 10px;
+        letter-spacing: -0.3px;
+        //font-size: 12px;
+        text-transform:capitalize;
+        padding:0 24px;
+
+        &.chip--selected {
+            color: #fff;
+            border: 0;
+            background: @Spitball-Main-color; //override
+        }*/
+
+//.chip.chip--selected
