--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -25,22 +25,18 @@
         //width: @cell-width;
         color: @Spitball-Text;
     }*/
-
-    .s-divider {
-        width: 0px;
-        border-left: solid 1px @Spitball-Main-color;
-        margin: 4px 6px;
-    }
+    
 
     .chip {
         background: #fff;
         color: @Spitball-Main-color;
         border: 1px solid @Spitball-Main-color;
         border-radius: 10px;
-        letter-spacing: -0.3px;
+        //letter-spacing: -0.3px;
         //font-size: 12px;
-        text-transform:capitalize;
-        padding:0 24px;
+        text-transform: capitalize;
+        padding: 0 24px;
+        border-radius: 10px;
 
         &.chip--selected {
             color: #fff;
