--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -98,7 +98,7 @@
         height: @height;
 
 
-        > img {
+        > img,.defaultImage {
             width: 100%;
             height: 100%;
             object-fit: cover;
