case 8945 and other stuff.

--- a/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
@@ -13,6 +13,11 @@
         text-transform: capitalize;
     }
 
+    .list__tile .avatar {
+        justify-content: center;
+        min-width: inherit;
+    }
+
     li.list__tile--active {
         background-color: @Selected-Vertical;
 
