--- a/Cloudents.Web/ClientApp/components/helpers/radioList.less
+++ b/Cloudents.Web/ClientApp/components/helpers/radioList.less
@@ -16,6 +16,9 @@
         border: 0;
         background: @Spitball-Main-color;
     }
+    &.chip--disabled{
+        opacity:0.5;
+    }
 }
 
 /*.chip {
