--- a/Cloudents.Web/ClientApp/components/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultItem.less
@@ -39,6 +39,10 @@ p {
 
 .imageWrapper(118px,160px);
 
+@media only screen and (max-device-width : 600px) {
+    .imageWrapper(88px,120px);
+}
+
 .img-wrap {
     .flexSameSize();
 }
