--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -15,6 +15,10 @@
         text-align: center;
         //width: @cell-width;
         color: @Spitball-Text;
+
+        @media only screen and (max-device-width : 600px) {
+            font-size:16px;
+        }
     }
 
     .sort-filter {
