Some responsive fixes.

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -1,5 +1,7 @@
 ﻿@import "../../mixin.less";
-
+.wrap  {
+    margin-top:2%;
+}
 .sec-result {
     //@cell-width: 504px;
     max-width: 504px;
@@ -17,7 +19,7 @@
         color: @Spitball-Text;
 
         @media only screen and (max-device-width : 600px) {
-            font-size:16px;
+            font-size: 16px;
         }
     }
 
