--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -87,7 +87,7 @@
 }
 
 .giveMeEllipsisOne() {
-    white-space: nowrap;
+    //white-space: nowrap; //TODO: IRENA - need to fix that
     overflow: hidden;
     text-overflow: ellipsis;
 }
